exports[`no-unreadable-array-destructuring > invalid(1): const [, , foo]: [string, string, number] = array; 1`] = `

  1 | const [, , foo]: [string, string, number] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(1): const [, , foo]: [string, string, number] = array; 2`] = `

Message:
> 1 | const [, , foo]: [string, string, number] = array;
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(1): const [,, foo] = parts; 1`] = `

  1 | const [,, foo] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(1): const [,, foo] = parts; 2`] = `

Message:
> 1 | const [,, foo] = parts;
    |       ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const foo = parts[2];

`;

exports[`no-unreadable-array-destructuring > invalid(10): const [, , third] = \`abc\`; 1`] = `

  1 | const [, , third] = \`abc\`;

`;

exports[`no-unreadable-array-destructuring > invalid(10): const [, , third] = \`abc\`; 2`] = `

Message:
> 1 | const [, , third] = \`abc\`;
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(10): function foo([bar, baz,, qux ,,, quux]) {} 1`] = `

  1 | function foo([bar, baz,, qux ,,, quux]) {}

`;

exports[`no-unreadable-array-destructuring > invalid(10): function foo([bar, baz,, qux ,,, quux]) {} 2`] = `

Message:
> 1 | function foo([bar, baz,, qux ,,, quux]) {}
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(11): const [, , third] = new WeakSet(); 1`] = `

  1 | const [, , third] = new WeakSet();

`;

exports[`no-unreadable-array-destructuring > invalid(11): const [, , third] = new WeakSet(); 2`] = `

Message:
> 1 | const [, , third] = new WeakSet();
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(11): const [,,...rest] = parts; 1`] = `

  1 | const [,,...rest] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(11): const [,,...rest] = parts; 2`] = `

Message:
> 1 | const [,,...rest] = parts;
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const rest = parts.slice(2);

`;

exports[`no-unreadable-array-destructuring > invalid(12): const [, , third] = function () {}; 1`] = `

  1 | const [, , third] = function () {};

`;

exports[`no-unreadable-array-destructuring > invalid(12): const [, , third] = function () {}; 2`] = `

Message:
> 1 | const [, , third] = function () {};
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(12): const [,,] = parts; 1`] = `

  1 | const [,,] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(12): const [,,] = parts; 2`] = `

Message:
> 1 | const [,,] = parts;
    |       ^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(13): const [, , third] = [1, 2, 3]; 1`] = `

  1 | const [, , third] = [1, 2, 3];

`;

exports[`no-unreadable-array-destructuring > invalid(13): const [, , third] = [1, 2, 3]; 2`] = `

Message:
> 1 | const [, , third] = [1, 2, 3];
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const third = [1, 2, 3][2];

`;

exports[`no-unreadable-array-destructuring > invalid(13): const [,,,] = parts; 1`] = `

  1 | const [,,,] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(13): const [,,,] = parts; 2`] = `

Message:
> 1 | const [,,,] = parts;
    |       ^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(14): const [, , third] = new Array(3); 1`] = `

  1 | const [, , third] = new Array(3);

`;

exports[`no-unreadable-array-destructuring > invalid(14): const [, , third] = new Array(3); 2`] = `

Message:
> 1 | const [, , third] = new Array(3);
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const third = new Array(3)[2];

`;

exports[`no-unreadable-array-destructuring > invalid(14): const [,,...rest] = new Array; 1`] = `

  1 | const [,,...rest] = new Array;

`;

exports[`no-unreadable-array-destructuring > invalid(14): const [,,...rest] = new Array; 2`] = `

Message:
> 1 | const [,,...rest] = new Array;
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const rest = (new Array).slice(2);

`;

exports[`no-unreadable-array-destructuring > invalid(15): const [, , third] = new Uint8Array(3); 1`] = `

  1 | const [, , third] = new Uint8Array(3);

`;

exports[`no-unreadable-array-destructuring > invalid(15): const [, , third] = new Uint8Array(3); 2`] = `

Message:
> 1 | const [, , third] = new Uint8Array(3);
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const third = new Uint8Array(3)[2];

`;

exports[`no-unreadable-array-destructuring > invalid(15): const [,,...rest] = (0, foo); 1`] = `

  1 | const [,,...rest] = (0, foo);

`;

exports[`no-unreadable-array-destructuring > invalid(15): const [,,...rest] = (0, foo); 2`] = `

Message:
> 1 | const [,,...rest] = (0, foo);
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const rest = (0, foo).slice(2);

`;

exports[`no-unreadable-array-destructuring > invalid(16): const [, , third] = new Float64Array(3); 1`] = `

  1 | const [, , third] = new Float64Array(3);

`;

exports[`no-unreadable-array-destructuring > invalid(16): const [, , third] = new Float64Array(3); 2`] = `

Message:
> 1 | const [, , third] = new Float64Array(3);
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const third = new Float64Array(3)[2];

`;

exports[`no-unreadable-array-destructuring > invalid(16): let [,,thirdElement] = new Array; 1`] = `

  1 | let [,,thirdElement] = new Array;

`;

exports[`no-unreadable-array-destructuring > invalid(16): let [,,thirdElement] = new Array; 2`] = `

Message:
> 1 | let [,,thirdElement] = new Array;
    |     ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let thirdElement = (new Array)[2];

`;

exports[`no-unreadable-array-destructuring > invalid(17): const [, , third] = getArray(); 1`] = `

  1 | const [, , third] = getArray();

`;

exports[`no-unreadable-array-destructuring > invalid(17): const [, , third] = getArray(); 2`] = `

Message:
> 1 | const [, , third] = getArray();
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const third = getArray()[2];

`;

exports[`no-unreadable-array-destructuring > invalid(17): var [,,thirdElement] = (((0, foo))); 1`] = `

  1 | var [,,thirdElement] = (((0, foo)));

`;

exports[`no-unreadable-array-destructuring > invalid(17): var [,,thirdElement] = (((0, foo))); 2`] = `

Message:
> 1 | var [,,thirdElement] = (((0, foo)));
    |     ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | var thirdElement = (((0, foo)))[2];

`;

exports[`no-unreadable-array-destructuring > invalid(18): const [, , third] = document.querySelectorAll('a'); 1`] = `

  1 | const [, , third] = document.querySelectorAll('a');

`;

exports[`no-unreadable-array-destructuring > invalid(18): const [, , third] = document.querySelectorAll('a'); 2`] = `

Message:
> 1 | const [, , third] = document.querySelectorAll('a');
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const third = document.querySelectorAll('a')[2];

`;

exports[`no-unreadable-array-destructuring > invalid(18): let [,,[,,thirdElementInThirdElement]] = foo 1`] = `

  1 | let [,,[,,thirdElementInThirdElement]] = foo

`;

exports[`no-unreadable-array-destructuring > invalid(18): let [,,[,,thirdElementInThirdElement]] = foo 2`] = `

Message:
> 1 | let [,,[,,thirdElementInThirdElement]] = foo
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let [,,thirdElementInThirdElement] = foo[2]

`;

exports[`no-unreadable-array-destructuring > invalid(18): let [,,[,,thirdElementInThirdElement]] = foo 3`] = `

Message:
> 1 | let [,,[,,thirdElementInThirdElement]] = foo
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(19): let [,,{propertyOfThirdElement}] = foo 1`] = `

  1 | let [,,{propertyOfThirdElement}] = foo

`;

exports[`no-unreadable-array-destructuring > invalid(19): let [,,{propertyOfThirdElement}] = foo 2`] = `

Message:
> 1 | let [,,{propertyOfThirdElement}] = foo
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let {propertyOfThirdElement} = foo[2]

`;

exports[`no-unreadable-array-destructuring > invalid(2): const [, , foo]: Array<string> = array; 1`] = `

  1 | const [, , foo]: Array<string> = array;

`;

exports[`no-unreadable-array-destructuring > invalid(2): const [, , foo]: Array<string> = array; 2`] = `

Message:
> 1 | const [, , foo]: Array<string> = array;
    |       ^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(2): const [foo,,, bar] = parts; 1`] = `

  1 | const [foo,,, bar] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(2): const [foo,,, bar] = parts; 2`] = `

Message:
> 1 | const [foo,,, bar] = parts;
    |       ^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(20): let [,,thirdElement] = foo, anotherVariable = bar; 1`] = `

  1 | let [,,thirdElement] = foo, anotherVariable = bar;

`;

exports[`no-unreadable-array-destructuring > invalid(20): let [,,thirdElement] = foo, anotherVariable = bar; 2`] = `

Message:
> 1 | let [,,thirdElement] = foo, anotherVariable = bar;
    |     ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let thirdElement = foo[2], anotherVariable = bar;

`;

exports[`no-unreadable-array-destructuring > invalid(21): let [,,thirdElement = {}] = foo; 1`] = `

  1 | let [,,thirdElement = {}] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(21): let [,,thirdElement = {}] = foo; 2`] = `

Message:
> 1 | let [,,thirdElement = {}] = foo;
    |     ^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(22): for (const [, , id] of shuffle(list)) {} 1`] = `

  1 | for (const [, , id] of shuffle(list)) {}

`;

exports[`no-unreadable-array-destructuring > invalid(22): for (const [, , id] of shuffle(list)) {} 2`] = `

Message:
> 1 | for (const [, , id] of shuffle(list)) {}
    |            ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(23): [this.property] = array; 1`] = `

  1 | [this.property] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(23): [this.property] = array; 2`] = `

Message:
> 1 | [this.property] = array;
    |  ^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(24): [object.property] = array; 1`] = `

  1 | [object.property] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(24): [object.property] = array; 2`] = `

Message:
> 1 | [object.property] = array;
    |  ^^^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(25): [object.property = defaultValue] = array; 1`] = `

  1 | [object.property = defaultValue] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(25): [object.property = defaultValue] = array; 2`] = `

Message:
> 1 | [object.property = defaultValue] = array;
    |  ^^^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(26): [(condition ? first : second).property] = array; 1`] = `

  1 | [(condition ? first : second).property] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(26): [(condition ? first : second).property] = array; 2`] = `

Message:
> 1 | [(condition ? first : second).property] = array;
    |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(27): [this.property.value] = array; 1`] = `

  1 | [this.property.value] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(27): [this.property.value] = array; 2`] = `

Message:
> 1 | [this.property.value] = array;
    |  ^^^^^^^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(28): [...object.property] = array; 1`] = `

  1 | [...object.property] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(28): [...object.property] = array; 2`] = `

Message:
> 1 | [...object.property] = array;
    |     ^^^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(29): [object.property!] = array; 1`] = `

  1 | [object.property!] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(29): [object.property!] = array; 2`] = `

Message:
> 1 | [object.property!] = array;
    |  ^^^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(3): const [foo,,,] = parts; 1`] = `

  1 | const [foo,,,] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(3): const [foo,,,] = parts; 2`] = `

Message:
> 1 | const [foo,,,] = parts;
    |       ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const foo = parts[0];

`;

exports[`no-unreadable-array-destructuring > invalid(3): let [, , foo]: string[] = array; 1`] = `

  1 | let [, , foo]: string[] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(3): let [, , foo]: string[] = array; 2`] = `

Message:
> 1 | let [, , foo]: string[] = array;
    |     ^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(30): for ([this.property] of arrays) {} 1`] = `

  1 | for ([this.property] of arrays) {}

`;

exports[`no-unreadable-array-destructuring > invalid(30): for ([this.property] of arrays) {} 2`] = `

Message:
> 1 | for ([this.property] of arrays) {}
    |       ^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(31): ({parts: [this.property]} = object); 1`] = `

  1 | ({parts: [this.property]} = object);

`;

exports[`no-unreadable-array-destructuring > invalid(31): ({parts: [this.property]} = object); 2`] = `

Message:
> 1 | ({parts: [this.property]} = object);
    |           ^^^^^^^^^^^^^ Do not assign destructured values to object properties.

`;

exports[`no-unreadable-array-destructuring > invalid(32): let[,,thirdElement] = foo; 1`] = `

  1 | let[,,thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(32): let[,,thirdElement] = foo; 2`] = `

Message:
> 1 | let[,,thirdElement] = foo;
    |    ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let thirdElement = foo[2];

`;

exports[`no-unreadable-array-destructuring > invalid(33): let[,,...thirdElement] = foo; 1`] = `

  1 | let[,,...thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(33): let[,,...thirdElement] = foo; 2`] = `

Message:
> 1 | let[,,...thirdElement] = foo;
    |    ^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let thirdElement = foo.slice(2);

`;

exports[`no-unreadable-array-destructuring > invalid(34): const[,,thirdElement] = foo; 1`] = `

  1 | const[,,thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(34): const[,,thirdElement] = foo; 2`] = `

Message:
> 1 | const[,,thirdElement] = foo;
    |      ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const thirdElement = foo[2];

`;

exports[`no-unreadable-array-destructuring > invalid(35): const[,,...thirdElement] = foo; 1`] = `

  1 | const[,,...thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(35): const[,,...thirdElement] = foo; 2`] = `

Message:
> 1 | const[,,...thirdElement] = foo;
    |      ^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const thirdElement = foo.slice(2);

`;

exports[`no-unreadable-array-destructuring > invalid(36): var[,,thirdElement] = foo; 1`] = `

  1 | var[,,thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(36): var[,,thirdElement] = foo; 2`] = `

Message:
> 1 | var[,,thirdElement] = foo;
    |    ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | var thirdElement = foo[2];

`;

exports[`no-unreadable-array-destructuring > invalid(37): var[,,...thirdElement] = foo; 1`] = `

  1 | var[,,...thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(37): var[,,...thirdElement] = foo; 2`] = `

Message:
> 1 | var[,,...thirdElement] = foo;
    |    ^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | var thirdElement = foo.slice(2);

`;

exports[`no-unreadable-array-destructuring > invalid(38): let[]=[],[,,thirdElement] = foo; 1`] = `

  1 | let[]=[],[,,thirdElement] = foo;

`;

exports[`no-unreadable-array-destructuring > invalid(38): let[]=[],[,,thirdElement] = foo; 2`] = `

Message:
> 1 | let[]=[],[,,thirdElement] = foo;
    |          ^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | let[]=[],thirdElement = foo[2];

`;

exports[`no-unreadable-array-destructuring > invalid(39): const [, foo] = parts; 1`] = `

Options:
- maximumIgnoredElements: 0

Code:
  1 | const [, foo] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(39): const [, foo] = parts; 2`] = `

Message:
> 1 | const [, foo] = parts;
    |       ^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const foo = parts[1];

`;

exports[`no-unreadable-array-destructuring > invalid(4): const [, , foo] = array; 1`] = `

  1 | const [, , foo] = array;

`;

exports[`no-unreadable-array-destructuring > invalid(4): const [, , foo] = array; 2`] = `

Message:
> 1 | const [, , foo] = array;
    |       ^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const foo = array[2];

`;

exports[`no-unreadable-array-destructuring > invalid(4): const [foo, bar,, baz ,,, qux] = parts; 1`] = `

  1 | const [foo, bar,, baz ,,, qux] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(4): const [foo, bar,, baz ,,, qux] = parts; 2`] = `

Message:
> 1 | const [foo, bar,, baz ,,, qux] = parts;
    |       ^^^^^^^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(40): const [,] = parts; 1`] = `

Options:
- maximumIgnoredElements: 0

Code:
  1 | const [,] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(40): const [,] = parts; 2`] = `

Message:
> 1 | const [,] = parts;
    |       ^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(41): const [foo,, bar] = parts; 1`] = `

Options:
- maximumIgnoredElements: 0

Code:
  1 | const [foo,, bar] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(41): const [foo,, bar] = parts; 2`] = `

Message:
> 1 | const [foo,, bar] = parts;
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(42): const [,,,] = parts; 1`] = `

Options:
- maximumIgnoredElements: 2

Code:
  1 | const [,,,] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(42): const [,,,] = parts; 2`] = `

Message:
> 1 | const [,,,] = parts;
    |       ^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(43): const [,,, foo] = parts; 1`] = `

Options:
- maximumIgnoredElements: 2

Code:
  1 | const [,,, foo] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(43): const [,,, foo] = parts; 2`] = `

Message:
> 1 | const [,,, foo] = parts;
    |       ^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const foo = parts[3];

`;

exports[`no-unreadable-array-destructuring > invalid(44): const [,,,, foo] = parts; 1`] = `

Options:
- maximumIgnoredElements: 3

Code:
  1 | const [,,,, foo] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(44): const [,,,, foo] = parts; 2`] = `

Message:
> 1 | const [,,,, foo] = parts;
    |       ^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const foo = parts[4];

`;

exports[`no-unreadable-array-destructuring > invalid(45): const [,,, ...rest] = parts; 1`] = `

Options:
- maximumIgnoredElements: 2

Code:
  1 | const [,,, ...rest] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(45): const [,,, ...rest] = parts; 2`] = `

Message:
> 1 | const [,,, ...rest] = parts;
    |       ^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

Output:
  1 | const rest = parts.slice(3);

`;

exports[`no-unreadable-array-destructuring > invalid(5): [,, foo] = bar; 1`] = `

  1 | [,, foo] = bar;

`;

exports[`no-unreadable-array-destructuring > invalid(5): [,, foo] = bar; 2`] = `

Message:
> 1 | [,, foo] = bar;
    | ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(5): const [,/* keep */, foo] = parts; 1`] = `

  1 | const [,/* keep */, foo] = parts;

`;

exports[`no-unreadable-array-destructuring > invalid(5): const [,/* keep */, foo] = parts; 2`] = `

Message:
> 1 | const [,/* keep */, foo] = parts;
    |       ^^^^^^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(6): ({parts: [,, foo]} = bar); 1`] = `

  1 | ({parts: [,, foo]} = bar);

`;

exports[`no-unreadable-array-destructuring > invalid(6): ({parts: [,, foo]} = bar); 2`] = `

Message:
> 1 | ({parts: [,, foo]} = bar);
    |          ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(6): const [, , third] = new Set([1, 2, 3]); 1`] = `

  1 | const [, , third] = new Set([1, 2, 3]);

`;

exports[`no-unreadable-array-destructuring > invalid(6): const [, , third] = new Set([1, 2, 3]); 2`] = `

Message:
> 1 | const [, , third] = new Set([1, 2, 3]);
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(7): const [, , third] = new Map([[1, 1]]); 1`] = `

  1 | const [, , third] = new Map([[1, 1]]);

`;

exports[`no-unreadable-array-destructuring > invalid(7): const [, , third] = new Map([[1, 1]]); 2`] = `

Message:
> 1 | const [, , third] = new Map([[1, 1]]);
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(7): function foo([,, bar]) {} 1`] = `

  1 | function foo([,, bar]) {}

`;

exports[`no-unreadable-array-destructuring > invalid(7): function foo([,, bar]) {} 2`] = `

Message:
> 1 | function foo([,, bar]) {}
    |              ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(8): const [, , ...rest] = \"abc\"; 1`] = `

  1 | const [, , ...rest] = "abc";

`;

exports[`no-unreadable-array-destructuring > invalid(8): const [, , ...rest] = \"abc\"; 2`] = `

Message:
> 1 | const [, , ...rest] = "abc";
    |       ^^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(8): function foo([bar,,, baz]) {} 1`] = `

  1 | function foo([bar,,, baz]) {}

`;

exports[`no-unreadable-array-destructuring > invalid(8): function foo([bar,,, baz]) {} 2`] = `

Message:
> 1 | function foo([bar,,, baz]) {}
    |              ^^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(9): const [, , third] = \"abc\"; 1`] = `

  1 | const [, , third] = "abc";

`;

exports[`no-unreadable-array-destructuring > invalid(9): const [, , third] = \"abc\"; 2`] = `

Message:
> 1 | const [, , third] = "abc";
    |       ^^^^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;

exports[`no-unreadable-array-destructuring > invalid(9): function foo([bar,,,]) {} 1`] = `

  1 | function foo([bar,,,]) {}

`;

exports[`no-unreadable-array-destructuring > invalid(9): function foo([bar,,,]) {} 2`] = `

Message:
> 1 | function foo([bar,,,]) {}
    |              ^^^^^^^^ Array destructuring may not contain consecutive ignored values.

`;
